# C-Projects

./: README.md
BillsManager/: CMakeLists.txt  GUI.cpp  GUI.h  README.md  domain.cpp  domain.h  main.cpp  repository.cpp  repository.h
ClinicManager/: CMakeLists.txt  MedicalAnalysis.cpp  MedicalAnalysis.h  Person.cpp  Person.h  README.md  UI.cpp  UI.h  main.cpp
DocumentsManager/: CMakeLists.txt  README.md  domain.cpp  domain.h  gui.cpp  gui.h  gui.ui  main.cpp  repository.cpp  repository.h
HospitalDepartment/: CMakeLists.txt  HospitalDepartment.cpp  HospitalDepartment.h  README.md  Services.cpp  Services.h  UI.cpp  UI.h  main.cpp
PrimeNumbers/: README.md
QuizObserver/: CMakeLists.txt  README.md  domain.cpp  domain.h  gui.cpp  gui.h  gui.ui  main.cpp  participantsgui.cpp  participantsgui.h  participantsgui.ui  repository.cpp  repository.h
RealEstateAgency/: CMakeLists.txt  README.md  UI.cpp  UI.h  client.cpp  client.h  dwelling.cpp  dwelling.h  main.cpp  real_estate_agency.cpp  real_estate_agency.h
ResearchTableModel/: CMakeLists.txt  README.md  domain.cpp  domain.h  gui.cpp  gui.h  gui.ui  main.cpp  repository.cpp  repository.h  table_model.cpp  table_model.h
SensorsShop/: CMakeLists.txt  Device.cpp  Device.h  README.md  Sensor.cpp  Sensor.h  UI.cpp  UI.h
ShoppingList/: CMakeLists.txt  README.md  domain.cpp  domain.h  gui.cpp  gui.h  gui.ui  main.cpp  repository.cpp  (+1 more)
VisitedSchools/: CMakeLists.txt  README.md  UI.cpp  UI.h  domain.cpp  domain.h  dynamic_array.cpp  dynamic_array.h  main.cpp  repository.cpp  repository.h  services.cpp  services.h
(+64 files in other folders)
